--- a/app.json
+++ b/app.json
@@ -23,6 +23,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "packagerOpts": {
+      "sourceExts": ["js", "json", "ts", "tsx", "vue"],
+      "config": "metro.config.js"
     }
   }
 }
