--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~37.0.3",
+    "expo": "^37.0.8",
     "expo-font": "~8.1.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
@@ -16,7 +16,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-web": "~0.11.7",
     "vue-native-core": "^0.1.4",
-    "vue-native-helper": "^0.1.4"
+    "vue-native-helper": "^0.1.4",
+    "react-native-maps": "0.26.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
