--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-maps": "0.26.1",
     "react-native-web": "~0.11.7",
     "vue-native-core": "^0.1.4",
     "vue-native-helper": "^0.1.4",
-    "react-native-maps": "0.26.1"
+    "vue-native-router": "^0.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
