--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.2",
     "expo": "^37.0.8",
     "expo-font": "~8.1.0",
+    "expo-location": "^8.2.1",
+    "expo-permissions": "^9.0.1",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
