--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-font": "~8.1.0",
     "expo-location": "^8.2.1",
     "expo-permissions": "^9.0.1",
+    "jwt-decode": "^2.2.0",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
