--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-location": "^8.2.1",
     "expo-permissions": "^9.0.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.20",
     "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
