--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "axios-middleware": "^0.3.1",
     "expo": "^37.0.8",
+    "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
     "expo-location": "^8.2.1",
     "expo-permissions": "^9.0.1",
