--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "^37.0.8",
     "expo-constants": "~9.0.0",
     "expo-font": "~8.1.0",
+    "expo-image-picker": "~8.1.0",
     "expo-location": "^8.2.1",
     "expo-permissions": "^9.0.1",
     "jwt-decode": "^2.2.0",
