--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-modal": "^1.0.16",
     "react-native-maps": "0.26.1",
     "react-native-paper": "^3.10.1",
     "react-native-ratings": "^7.3.0",
