--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios-middleware": "^0.3.1",
     "expo": "^37.0.8",
     "expo-constants": "~9.0.0",
+    "expo-file-system": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-image-manipulator": "~8.1.0",
     "expo-image-picker": "~8.1.0",
