--- a/app.json
+++ b/app.json
@@ -25,8 +25,15 @@
       "supportsTablet": true
     },
     "packagerOpts": {
-      "sourceExts": ["js", "json", "ts", "tsx", "vue"],
+      "sourceExts": [
+        "js",
+        "json",
+        "ts",
+        "tsx",
+        "vue"
+      ],
       "config": "metro.config.js"
-    }
+    },
+    "description": ""
   }
 }
